# berserker

./: .editorconfig  Cargo.toml  Dockerfile  Dockerfile.build  Makefile  README.md  stub.asm  workload.toml
.github/workflows/: main.yml
bpf/: Makefile  fentry.bpf.c  vmlinux.h
bpf/vmlinux/: aarch64.h  x86_64.h
k8s/: berserker.yml  endpoints-uniform.yml  endpoints-zipf.yml  processes-configmap.yml  syscalls.yml
scripts/network/: Dockerfile  init.sh  prepare-tap.sh
scripts/network/workloads/: network-client.toml  network-server.toml
src/: lib.rs  machine.rs  main.rs  worker.rs  workload.rs
src/script/: ast.rs  grammar.peg  mod.rs  parser.rs  rules.rs
src/worker/: bpf.rs  endpoints.rs  mod.rs  network.rs  processes.rs  script.rs  syscalls.rs  template.rs  udp.rs
src/worker/io_uring/: mod.rs  openat.rs  openat2.rs  statx.rs  unlinkat.rs
src/worker/syscalls/: accept.rs  capset.rs  chmod.rs  chown.rs  connect.rs  dummy.rs  ioctl.rs  listen.rs  mmap.rs  mod.rs  mount.rs  open.rs  openat.rs  prctl.rs  setresuid.rs  setreuid.rs  setuid.rs  socket.rs  unlink.rs  unshare.rs
src/workload/: endpoints.rs  mod.rs  network.rs
tests/workers/network/: Makefile  README.md  smoke.sh  sys_accept.bt  workload.client.toml  workload.server.toml
tests/workers/processes/random/: smoke.sh  sys_exec.bt  workload.toml
workloads/: bpf.toml  endpoints-uniform.toml  endpoints-zipf.toml  example.ber  example.short.ber  io_uring.toml  network.toml  process_network.ber  processes.toml  syscalls.toml
workloads/syscalls/: syscall.toml  syscall_accept.toml  syscall_open.toml
(+2 files in other folders)
