[package]
name = "berserker"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
fork = "0.1"
nix = "0.26.2"
core_affinity = "0.8.0"
itertools = "0.10.1"
rand = "0.8.5"
rand_distr = "0.4.3"
usdt = "0.3.5"
futures = "0.3"
log = "0.4.6"
env_logger = "0.9.0"
config = "0.13.3"
syscalls = "0.6.13"
serde = { version = "1.0.171", features = ["derive"] }
